# rml

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  install.yaml  install_test.yml  release.yml  test-installation.yml  unit_tests.yaml
cli/: install.sh
src/rml/: __init__.py  auth.py  datatypes.py  env_utils.py  exceptions.py  git.py  package_config.py  package_logger.py  ui.py  update.py  utils.py
tests/unit/: dummy.py  test_git.py  test_init.py  test_utils.py
