[project]
name = "rml"
version = "0.1.0"
description = "CLI for Recurse ML"
readme = "README.md"
authors = [
    {name = "Armin Stepanyan", email = "a@recurse.ml"},
    {name = "Enzo Incutti", email = "e@recurse.ml"},
]
requires-python = ">=3.11"
dependencies = [
    "click",
    "httpx",
    "plumbum>=1.9.0",
    "pydantic>=2.11.4",
    "pyinstaller>=6.13.0",
    "rich",
]

[project.optional-dependencies]

test = [
  "ruff >= 0.9",
]


[tool.ruff]
include = ["src/**/*.py", "cli/**/*.py", "containers/**/*.py", "tests/**/*.py", "notebooks/**/*.py"]

[tool.ruff.lint]
select = ["F", # Pyflakes
          "I", # isort
          "E"] # pycodestyle
ignore = ["E501", # line-too-long, conflicting with formatter
          "E731"] # assigning lambda's to variables is a honking good idea

[tool.ruff.lint.isort]
known-local-folder = ["src", "rml"] # Necessary to separate imports for local package


[project.scripts]
rml = "rml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
